--- a/Thermory.Web/Web.config
+++ b/Thermory.Web/Web.config
@@ -48,6 +48,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/PageNotFound" />
+    </customErrors>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
