--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\OrderMiscellaneousLineItem.cs" />
     <Compile Include="Models\OrderType.cs" />
     <Compile Include="Models\TransactionType.cs" />
+    <Compile Include="Models\UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
