--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -214,9 +214,10 @@
     <Compile Include="Models\IViewModel.cs" />
     <Compile Include="Models\LumberOrderForm.cs" />
     <Compile Include="Models\MiscellaneousOrderForm.cs" />
+    <Compile Include="Models\OrderReview.cs" />
+    <Compile Include="Models\OrderView.cs" />
     <Compile Include="Models\ProductOrderQuantity.cs" />
     <Compile Include="Models\InventoryModel.cs" />
-    <Compile Include="Models\OrderView.cs" />
     <Compile Include="Models\OrderForm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionVariables.cs" />
