--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -213,12 +213,15 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\IViewModel.cs" />
     <Compile Include="Models\LumberOrderForm.cs" />
+    <Compile Include="Models\LumberTransactionDetails.cs" />
     <Compile Include="Models\MiscellaneousOrderForm.cs" />
+    <Compile Include="Models\MiscellaneousTransactionDetails.cs" />
     <Compile Include="Models\OrderReview.cs" />
     <Compile Include="Models\OrderView.cs" />
     <Compile Include="Models\ProductOrderQuantity.cs" />
     <Compile Include="Models\InventoryModel.cs" />
     <Compile Include="Models\OrderForm.cs" />
+    <Compile Include="Models\TransactionDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionVariables.cs" />
   </ItemGroup>
@@ -346,6 +349,10 @@
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Order\Review.cshtml" />
     <Content Include="Views\PageNotFound\Index.cshtml" />
+    <Content Include="Views\Order\_LumberProductReview.cshtml" />
+    <Content Include="Views\Order\_MiscellaneousProductReview.cshtml" />
+    <Content Include="Views\Order\_LumberTransactionDetails.cshtml" />
+    <Content Include="Views\Order\_MiscellaneousTransactionDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
