--- a/Thermory.Web/Web.config
+++ b/Thermory.Web/Web.config
@@ -25,7 +25,7 @@
       </layout>
     </appender>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file type="log4net.Util.PatternString" value="%property{LogFileName}" />
+      <file type="log4net.Util.PatternString" value="application.log" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="5" />
@@ -48,8 +48,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="On">
-      <error statusCode="404" redirect="~/PageNotFound" />
+    <customErrors mode="On" defaultRedirect="/ohno/error">
+      <error statusCode="400" redirect="/ohno/badrequest" />
+      <error statusCode="403" redirect="/ohno/forbidden" />
+      <error statusCode="404" redirect="/ohno/notfound" />
+      <error statusCode="414" redirect="/ohno/urltoolong" />
+      <error statusCode="503" redirect="/ohno/serviceunavailable" />
     </customErrors>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
