Refactored user grid to use role names string list instead of single string field to load the roles into the edit control.

--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Commands\GetAllTransactionTypes.cs" />
     <Compile Include="Commands\GetOrderById.cs" />
     <Compile Include="Commands\GetInventoryTransactionsByOrderId.cs" />
+    <Compile Include="Commands\GetUserRolesByUserId.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\IGetCommand.cs" />
     <Compile Include="Commands\SavePackagingType.cs" />
