--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Controllers\Api\PurchaseOrderGridController.cs" />
     <Compile Include="Controllers\Api\ThermoryGridController.cs" />
     <Compile Include="Controllers\Api\UserGridController.cs" />
+    <Compile Include="Controllers\CatalogController.cs" />
     <Compile Include="Controllers\ExceptionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InventoryController.cs" />
@@ -219,8 +220,8 @@
     </Compile>
     <Compile Include="ModelAdapter.cs" />
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\CatalogModel.cs" />
     <Compile Include="Models\ErrorInfo.cs" />
-    <Compile Include="Models\IViewModel.cs" />
     <Compile Include="Models\LumberOrderForm.cs" />
     <Compile Include="Models\LumberTransactionDetails.cs" />
     <Compile Include="Models\MiscellaneousOrderForm.cs" />
@@ -231,7 +232,6 @@
     <Compile Include="Models\InventoryModel.cs" />
     <Compile Include="Models\OrderForm.cs" />
     <Compile Include="Models\TransactionDetails.cs" />
-    <Compile Include="Models\UserRoleView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionVariables.cs" />
   </ItemGroup>
@@ -369,6 +369,9 @@
     <Content Include="Views\Shared\Order\_CustomerSelector.cshtml" />
     <Content Include="Views\Shared\Order\_PackagingTypeSelector.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\Catalog\Index.cshtml" />
+    <Content Include="Views\Catalog\_LumberSummary.cshtml" />
+    <Content Include="Views\Catalog\_MiscSummary.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
