--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CommandBuilders\EditOrderBuilder.cs" />
     <Compile Include="CommandBuilders\InventoryAuditBuilder.cs" />
     <Compile Include="CommandBuilders\OrderBuilder.cs" />
+    <Compile Include="CommandBuilders\UpdateUserRolesBuilder.cs" />
     <Compile Include="Commands\AdjustLumberProductQuantity.cs" />
     <Compile Include="Commands\AdjustMiscellaneousProductQuantity.cs" />
     <Compile Include="Commands\CreateInventoryTransaction.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Commands\CreateOrderMiscellaneousLineItem.cs" />
     <Compile Include="Commands\DeleteOrderLumberLineItem.cs" />
     <Compile Include="Commands\DeleteOrderMiscellaneousLineItem.cs" />
+    <Compile Include="Commands\DeleteUserRole.cs" />
     <Compile Include="Commands\EditOrderLumberLineItem.cs" />
     <Compile Include="Commands\EditOrderMiscellaneousLineItem.cs" />
     <Compile Include="Commands\GetAllCustomers.cs" />
@@ -81,6 +83,7 @@
     <Compile Include="Commands\GetAllTransactionTypes.cs" />
     <Compile Include="Commands\GetOrderById.cs" />
     <Compile Include="Commands\GetInventoryTransactionsByOrderId.cs" />
+    <Compile Include="Commands\GetAllRoles.cs" />
     <Compile Include="Commands\GetUserRolesByUserId.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\IGetCommand.cs" />
@@ -89,6 +92,7 @@
     <Compile Include="Commands\UpdateLumberProductInventory.cs" />
     <Compile Include="Commands\UpdateMiscellaneousProductInventory.cs" />
     <Compile Include="Commands\SaveOrder.cs" />
+    <Compile Include="Commands\AddUserRole.cs" />
     <Compile Include="DatabaseCommandDirectory.cs" />
     <Compile Include="Commands\DatabaseCommand.cs" />
     <Compile Include="Commands\DatabaseGetCommand.cs" />
