--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Commands\GetAllMiscellaneousCategories.cs" />
     <Compile Include="Commands\GetAllMiscellaneousProducts.cs" />
     <Compile Include="Commands\GetAllLumberProducts.cs" />
+    <Compile Include="Commands\GetAllOrderStatuses.cs" />
     <Compile Include="Commands\GetAllOrderTypes.cs" />
     <Compile Include="Commands\GetAllPackagingTypes.cs" />
     <Compile Include="Commands\GetAllTransactionTypes.cs" />
@@ -85,8 +86,6 @@
     <Compile Include="Commands\GetInventoryTransactionsByOrderId.cs" />
     <Compile Include="Commands\GetAllRoles.cs" />
     <Compile Include="Commands\GetUserRolesByUserId.cs" />
-    <Compile Include="Commands\ICommand.cs" />
-    <Compile Include="Commands\IGetCommand.cs" />
     <Compile Include="Commands\SaveLumberCategory.cs" />
     <Compile Include="Commands\SaveLumberProduct.cs" />
     <Compile Include="Commands\SaveLumberSubCategory.cs" />
