Handle validation errors better to display all errors.

--- a/Thermory.Web/Web.config
+++ b/Thermory.Web/Web.config
@@ -48,12 +48,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="/ohno/error">
-      <error statusCode="400" redirect="/ohno/badrequest" />
-      <error statusCode="403" redirect="/ohno/forbidden" />
-      <error statusCode="404" redirect="/ohno/notfound" />
-      <error statusCode="414" redirect="/ohno/urltoolong" />
-      <error statusCode="503" redirect="/ohno/serviceunavailable" />
+    <customErrors mode="On" defaultRedirect="/Exception/error">
+      <error statusCode="400" redirect="/Exception/badrequest" />
+      <error statusCode="403" redirect="/Exception/forbidden" />
+      <error statusCode="404" redirect="/Exception/notfound" />
+      <error statusCode="414" redirect="/Exception/urltoolong" />
+      <error statusCode="503" redirect="/Exception/serviceunavailable" />
     </customErrors>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
