--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Constants\TransactionTypeNames.cs" />
     <Compile Include="Enums\OrderTypes.cs" />
     <Compile Include="Enums\TransactionTypes.cs" />
+    <Compile Include="Utils\HtmlHelpers.cs" />
     <Compile Include="Utils\LumberCalculations.cs" />
     <Compile Include="Utils\LengthConverter.cs" />
     <Compile Include="Models\Customer.cs" />
