--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -369,7 +369,6 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Inventory\Index.cshtml" />
     <Content Include="Views\Inventory\_LumberSummary.cshtml" />
-    <Content Include="Views\SalesOrder\Form.cshtml" />
     <Content Include="Views\Inventory\_LumberAuditForm.cshtml" />
     <Content Include="Views\Inventory\Audit.cshtml" />
     <Content Include="Views\Inventory\_MiscSummary.cshtml" />
@@ -383,7 +382,6 @@
     <Content Include="Views\Shared\Order\_LumberTransactionDetails.cshtml" />
     <Content Include="Views\Shared\Order\_MiscellaneousTransactionDetails.cshtml" />
     <Content Include="Views\Shared\Exception.cshtml" />
-    <Content Include="Views\PurchaseOrder\Form.cshtml" />
     <Content Include="Views\PurchaseOrder\Index.cshtml" />
     <Content Include="Views\PurchaseOrder\Review.cshtml" />
     <Content Include="Views\Shared\Order\_CustomerSelector.cshtml" />
@@ -397,7 +395,7 @@
     <Content Include="Views\Catalog\_LumberProductForm.cshtml" />
     <Content Include="Views\Catalog\_MiscSubCategoryForm.cshtml" />
     <Content Include="Views\Catalog\_MiscProductForm.cshtml" />
-    <Content Include="Views\Shared\Order\_Form.cshtml" />
+    <Content Include="Views\Shared\Order\Form.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
