--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -104,6 +104,8 @@
     <Compile Include="Commands\DatabaseGetCommand.cs" />
     <Compile Include="Extensions\OrderLumberLineItemsExt.cs" />
     <Compile Include="Extensions\OrderMiscellaneousLineItemExt.cs" />
+    <Compile Include="OrderStatusCache.cs" />
+    <Compile Include="OrderTypeCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThermoryContext.cs" />
     <Compile Include="Commands\TransactionalCommand.cs" />
