--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CommandBuilders\EditOrderBuilder.cs" />
     <Compile Include="CommandBuilders\InventoryAuditBuilder.cs" />
     <Compile Include="CommandBuilders\OrderBuilder.cs" />
+    <Compile Include="CommandBuilders\ReceiveOrderBuilder.cs" />
     <Compile Include="CommandBuilders\UpdateUserRolesBuilder.cs" />
     <Compile Include="Commands\AdjustLumberProductQuantity.cs" />
     <Compile Include="Commands\AdjustMiscellaneousProductQuantity.cs" />
