Completed transitioning order to loaded status. Have to complete packaging slip creation workflow.

--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CommandBuilders\DeleteOrderBuilder.cs" />
     <Compile Include="CommandBuilders\EditOrderBuilder.cs" />
     <Compile Include="CommandBuilders\InventoryAuditBuilder.cs" />
+    <Compile Include="CommandBuilders\LoadOrderBuilder.cs" />
     <Compile Include="CommandBuilders\OrderBuilder.cs" />
     <Compile Include="CommandBuilders\PullOrderBuilder.cs" />
     <Compile Include="CommandBuilders\ReceiveOrderBuilder.cs" />
