--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -54,6 +54,8 @@
   <ItemGroup>
     <Compile Include="CommandBuilders\CommandBuilder.cs" />
     <Compile Include="CommandBuilders\CreateOrderBuilder.cs" />
+    <Compile Include="CommandBuilders\CreatePackagesBuilder.cs" />
+    <Compile Include="CommandBuilders\EditPackagesBuilder.cs" />
     <Compile Include="CommandBuilders\SavePackagesBuilder.cs" />
     <Compile Include="CommandBuilders\DeleteLumberLineItemBuilder.cs" />
     <Compile Include="CommandBuilders\DeleteMiscellaneousLineItemBuilder.cs" />
@@ -73,12 +75,12 @@
     <Compile Include="Commands\CreateMiscellaneousTransactionDetails.cs" />
     <Compile Include="Commands\CreateOrderLumberLineItem.cs" />
     <Compile Include="Commands\CreateOrderMiscellaneousLineItem.cs" />
-    <Compile Include="Commands\CreateOrderPackage.cs" />
-    <Compile Include="Commands\CreateOrderPackageLumberLineItem.cs" />
+    <Compile Include="Commands\CreatePackage.cs" />
+    <Compile Include="Commands\CreatePackageLumberLineItem.cs" />
     <Compile Include="Commands\DeleteOrderLumberLineItem.cs" />
     <Compile Include="Commands\DeleteOrderMiscellaneousLineItem.cs" />
-    <Compile Include="Commands\DeleteOrderPackage.cs" />
-    <Compile Include="Commands\DeleteOrderPackageLumberLineItem.cs" />
+    <Compile Include="Commands\DeletePackage.cs" />
+    <Compile Include="Commands\DeletePackageLumberLineItem.cs" />
     <Compile Include="Commands\DeleteUserRole.cs" />
     <Compile Include="Commands\EditOrderLumberLineItem.cs" />
     <Compile Include="Commands\EditOrderMiscellaneousLineItem.cs" />
