--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Commands\GetOrderById.cs" />
     <Compile Include="Commands\GetInventoryTransactionsByOrderId.cs" />
     <Compile Include="Commands\GetAllRoles.cs" />
+    <Compile Include="Commands\GetPackageById.cs" />
     <Compile Include="Commands\GetUserRolesByUserId.cs" />
     <Compile Include="Commands\SaveLumberCategory.cs" />
     <Compile Include="Commands\SaveLumberProduct.cs" />
