--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Models\MiscellaneousSubCategoryViewModel.cs" />
     <Compile Include="Models\OrderReview.cs" />
     <Compile Include="Models\OrderView.cs" />
+    <Compile Include="Models\PackingSlip.cs" />
     <Compile Include="Models\ProductOrderQuantity.cs" />
     <Compile Include="Models\InventoryModel.cs" />
     <Compile Include="Models\OrderForm.cs" />
@@ -398,6 +399,8 @@
     <Content Include="Views\Shared\Order\Review.cshtml" />
     <Content Include="Views\SalesOrder\Package.cshtml" />
     <Content Include="Views\PackingSlip\Index.cshtml" />
+    <Content Include="Views\Shared\Package\_LumberProductReview.cshtml" />
+    <Content Include="Views\Shared\Package\_MiscellaneousProductReview.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
