Fixed a couple of bugs.

--- a/Thermory.Web/Web.Release.config
+++ b/Thermory.Web/Web.Release.config
@@ -4,6 +4,6 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=184.168.194.78;Integrated Security=False;User ID=thermory;Connect Timeout=15;Encrypt=False;Packet Size=4096" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=184.168.194.78;User ID=cwescott;Password=zYh3g!05;Initial Catalog=Thermory;Trusted_Connection=False;Persist Security Info=True;Connection Timeout=600;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
 </configuration>
